--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,13 +1,14 @@
 <h1>Héroes <small> Marvel y DC</small> </h1>
 <hr>
 <div class="card-columns">
-  <div class="card">
-    <img src="assets/img/aquaman.png" class="card-img-top" alt="...">
-    <div class="card-body">
-      <h5 class="card-title">Card title</h5>
-      <p class="card-text">This card has supporting text below as a natural lead-in to additional content.</p>
-      <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
-      <button class="btn btn-outline-success btn-block">Ver más</button>
+  <div class="card animated fadeIn fast p-3" *ngFor="let heroe of heroes; let i = index" >
+    <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
+    <div class="card-block">
+      <h5 class="card-title">{{ heroe.nombre }}</h5>
+      <p class="card-text">{{ heroe.bio }}</p>
+      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
+      <button (click)="verHeroe(i)" class="btn btn-outline-success btn-block">Ver más</button>
+      <!-- <a [routerLink]="['/heroe', i]" class="btn btn-outline-success">Ver más</a> -->
     </div>
   </div>
 </div>
