--- a/src/app/components/busqueda/busqueda.component.html
+++ b/src/app/components/busqueda/busqueda.component.html
@@ -8,14 +8,5 @@
   </div>
 </div>
 <div class="card-columns">
-  <div class="card animated fadeIn fast p-3" *ngFor="let heroe of heroes; let i = index" >
-    <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
-    <div class="card-block">
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text">{{ heroe.bio }}</p>
-      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
-      <button (click)="verHeroe(i)" class="btn btn-outline-success btn-block">Ver más</button>
-      <!-- <a [routerLink]="['/heroe', i]" class="btn btn-outline-success">Ver más</a> -->
-    </div>
-  </div>
+  <app-heroe-tarjeta [heroe]="heroe" [index]="heroe.idx" *ngFor="let heroe of heroes" ></app-heroe-tarjeta>
 </div>
