--- a/src/app/components/heroes/heroes.component.html
+++ b/src/app/components/heroes/heroes.component.html
@@ -1,14 +1,8 @@
 <h1>Héroes <small> Marvel y DC</small> </h1>
 <hr>
+
+<!--  -->
+
 <div class="card-columns">
-  <div class="card animated fadeIn fast p-3" *ngFor="let heroe of heroes; let i = index" >
-    <img [src]="heroe.img" class="card-img-top" [alt]="heroe.nombre">
-    <div class="card-block">
-      <h5 class="card-title">{{ heroe.nombre }}</h5>
-      <p class="card-text">{{ heroe.bio }}</p>
-      <p class="card-text"><small class="text-muted">{{ heroe.aparicion }}</small></p>
-      <button (click)="verHeroe(i)" class="btn btn-outline-success btn-block">Ver más</button>
-      <!-- <a [routerLink]="['/heroe', i]" class="btn btn-outline-success">Ver más</a> -->
-    </div>
-  </div>
+  <app-heroe-tarjeta (heroeSeleccionado)="verHeroe( $event )" [heroe]="heroe" [index]="i" *ngFor="let heroe of heroes; let i = index" ></app-heroe-tarjeta>
 </div>
